[project]
name = "dnd-dice-mcp"
version = "0.1.0"
description = "A D&D toolset using MCP, including dice rolling and map management."
readme = "README.md"
license = { text = "CC-BY-NC-SA-4.0" }
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.26.0",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pyright>=1.1.408",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "ruff>=0.15.4",
]
